# ppkg

./: .drone.yml  .gitignore  CMakeLists.txt  META  Makefile.am  README.md  autogen.sh  configure.ac
docs/: README.md  package-example.md
include/: version.h
src/: ppkg.c  ppkg.h
